--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -49,4 +49,14 @@
     <servlet-name>IndexServlet</servlet-name>
     <url-pattern>/index</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>CategoryListServlet</display-name>
+    <servlet-name>CategoryListServlet</servlet-name>
+    <servlet-class>com.itheima.web.CategoryListServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CategoryListServlet</servlet-name>
+    <url-pattern>/categoryList</url-pattern>
+  </servlet-mapping>
 </web-app>
