--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,81 +2,27 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>SHOP</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+
   <servlet>
     <description></description>
-    <display-name>RegisterServlet</display-name>
-    <servlet-name>RegisterServlet</servlet-name>
-    <servlet-class>com.itheima.web.RegisterServlet</servlet-class>
+    <display-name>ProductServlet</display-name>
+    <servlet-name>ProductServlet</servlet-name>
+    <servlet-class>com.itheima.web.ProductServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>RegisterServlet</servlet-name>
-    <url-pattern>/register</url-pattern>
+    <servlet-name>ProductServlet</servlet-name>
+    <url-pattern>/product</url-pattern>
   </servlet-mapping>
   <servlet>
     <description></description>
-    <display-name>ActiveServlet</display-name>
-    <servlet-name>ActiveServlet</servlet-name>
-    <servlet-class>com.itheima.web.ActiveServlet</servlet-class>
+    <display-name>UserServlet</display-name>
+    <servlet-name>UserServlet</servlet-name>
+    <servlet-class>com.itheima.web.UserServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>ActiveServlet</servlet-name>
-    <url-pattern>/active</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>CheckUsernameServlet</display-name>
-    <servlet-name>CheckUsernameServlet</servlet-name>
-    <servlet-class>com.itheima.web.CheckUsernameServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>CheckUsernameServlet</servlet-name>
-    <url-pattern>/checkUsername</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>IndexServlet</display-name>
-    <servlet-name>IndexServlet</servlet-name>
-    <servlet-class>com.itheima.web.IndexServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>IndexServlet</servlet-name>
-    <url-pattern>/index</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>CategoryListServlet</display-name>
-    <servlet-name>CategoryListServlet</servlet-name>
-    <servlet-class>com.itheima.web.CategoryListServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>CategoryListServlet</servlet-name>
-    <url-pattern>/categoryList</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>ProductListByCidServlet</display-name>
-    <servlet-name>ProductListByCidServlet</servlet-name>
-    <servlet-class>com.itheima.web.ProductListByCidServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ProductListByCidServlet</servlet-name>
-    <url-pattern>/productListByCid</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>ProductInfoServlet</display-name>
-    <servlet-name>ProductInfoServlet</servlet-name>
-    <servlet-class>com.itheima.web.ProductInfoServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ProductInfoServlet</servlet-name>
-    <url-pattern>/productInfo</url-pattern>
+    <servlet-name>UserServlet</servlet-name>
+    <url-pattern>/user</url-pattern>
   </servlet-mapping>
 </web-app>
